@@ -26,13 +26,12 @@ function Input:GetContentDimensions(gui, data_context)
   return inner_width, inner_height
 end
 
-function Input:Render(gui, new_id, data_context, layout)
+function Input:Render(gui, new_id, x, y, data_context, layout)
   if not gui then error("Required parameter #1: GuiObject", 2) end
   if not data_context then error("Required parameter #2: data_context", 2) end
   local width, height = self:GetContentDimensions(gui, data_context)
   local border_size = self:GetBorderSize()
   local value = get_value_from_chain_or_not(data_context, self.binding_target)
-  local x, y = self.style.margin_left, self.style.margin_top
   local offset_x, offset_y = self:GetRenderOffset(gui, data_context)
   if layout then
     x, y = layout:GetPositionForWidget(gui, data_context, self, width, height)
