@@ -1,4 +1,6 @@
 - Fix multiple GUIs not working correctly
+- When specifiying X, Y position when rendering the main layout, will now update correctly
+  and also not use the margin system for it internally anymore.
 
 v0.2.0:
 - Images now support the @click attribute to basically create an ImageButton
